@startuml

title __GUICOMPONENTS's Class Diagram__\n

  package  {
    package GUIComponents {
      class CommandBox {
          {static} + BLACK_BACKGROUND : Background
          - textToCommand : HashMap<String, Command>
          - currentCommandText : String
          - currentCommandLabel : Label
          + CommandBox()
          - putCommandsInTable()
          + setDimensions()
          + hide()
          + showDefault()
          + getCommand()
          + getCommandLabel()
          + clearCommand()
          + setCommandLabelText()
          + addItem()
      }
    }
  }
  

  package  {
    package GUIComponents {
      enum Command {
        OPEN
        LOOK
        WALK
        TALK
        PUSH
        CLOSE
        GRAB
        USE
        DROP
      }
    }
  }
  

  package  {
    package GUIComponents {
      class CommandList {
          + CommandList()
          + hide()
          + show()
      }
    }
  }
  

  package  {
    package GUIComponents {
      class CommandLabel {
          + CommandLabel()
      }
    }
  }
  

  package  {
    package GUIComponents {
      class Inventory {
          - items : ArrayList<InventoryItem>
          + Inventory()
          + addItem()
          + remove()
          + update()
          + hide()
          + show()
      }
    }
  }
  

  package  {
    package GUIComponents {
      class InventoryItem {
          - id : String
          + InventoryItem()
          + getName()
      }
    }
  }
  

  package  {
    package GUIComponents {
      class EntityView {
          - entities : Entity[]
          - numEntities : int
          + EntityView()
          + addEntity()
          + renderAll()
          + updateAll()
          + clear()
      }
    }
  }
  

  package  {
    package GUIComponents {
      class GamePane {
          - backgroundCanvas : Canvas
          - playerPane : Pane
          - foregroundCanvas : Canvas
          - foregroundPlayerPane : Pane
          + GamePane()
          + setDimensions()
          + generateScene()
          + clear()
          + getCanvas()
          + getPlayerPane()
      }
    }
  }
  

  package  {
    package GUIComponents {
      class PrimaryView {
          - vHeight : double
          - cHeight : double
          {static} - DEFAULT_WIDTH : double
          {static} - DEFAULT_HEIGHT : double
          {static} - BACKGROUND_FILE : String
          {static} - FOREGROUND_FILE : String
          - width : double
          - height : double
          + PrimaryView()
          - updateDimensions()
          + renderView()
          + updateAll()
          + getCommandBox()
          + getGamePane()
          + getCommand()
      }
    }
  }
  

  CommandBox -up-|> BorderPane
  CommandBox o-- CommandList : commandList
  CommandBox o-- Inventory : inventory
  CommandBox o-- Command : currentCommand
  CommandBox +-down- Command
  CommandBox +-down- CommandList
  CommandBox +-down- CommandLabel
  CommandBox +-down- Inventory
  CommandBox +-down- InventoryItem
  CommandList -up-|> GridPane
  CompositeSize -up-|> Cloneable
  Interval -up-|> Comparable
  ShapeProperty -up-|> Runnable
  ShapeProperty -up-|> StyleableObjectProperty
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  MinPrefMaxProperty -up-|> StyleableDoubleProperty
  ValueWrapper -up-|> DoubleBinding
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InsetsProperty -up-|> ReadOnlyObjectProperty
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  CommandLabel -up-|> Label
  ShapeProperty -up-|> Runnable
  ShapeProperty -up-|> StyleableObjectProperty
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  MinPrefMaxProperty -up-|> StyleableDoubleProperty
  ValueWrapper -up-|> DoubleBinding
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InsetsProperty -up-|> ReadOnlyObjectProperty
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  Inventory -up-|> GridPane
  CompositeSize -up-|> Cloneable
  Interval -up-|> Comparable
  ShapeProperty -up-|> Runnable
  ShapeProperty -up-|> StyleableObjectProperty
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  MinPrefMaxProperty -up-|> StyleableDoubleProperty
  ValueWrapper -up-|> DoubleBinding
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InsetsProperty -up-|> ReadOnlyObjectProperty
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InventoryItem -up-|> ImageView
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  BorderPositionProperty -up-|> ObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  ShapeProperty -up-|> Runnable
  ShapeProperty -up-|> StyleableObjectProperty
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  MinPrefMaxProperty -up-|> StyleableDoubleProperty
  ValueWrapper -up-|> DoubleBinding
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InsetsProperty -up-|> ReadOnlyObjectProperty
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  EntityView o-- PrimaryView : main
  GamePane -up-|> StackPane
  GamePane o-- PrimaryView : parent
  ShapeProperty -up-|> Runnable
  ShapeProperty -up-|> StyleableObjectProperty
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  MinPrefMaxProperty -up-|> StyleableDoubleProperty
  ValueWrapper -up-|> DoubleBinding
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InsetsProperty -up-|> ReadOnlyObjectProperty
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  PrimaryView -up-|> VBox
  PrimaryView o-- EntityView : entityView
  PrimaryView o-- GamePane : gamePane
  PrimaryView o-- CommandBox : commandBox
  ShapeProperty -up-|> Runnable
  ShapeProperty -up-|> StyleableObjectProperty
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  MinPrefMaxProperty -up-|> StyleableDoubleProperty
  ValueWrapper -up-|> DoubleBinding
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener
  InsetsProperty -up-|> ReadOnlyObjectProperty
  LazyBoundsProperty -up-|> ReadOnlyObjectProperty
  LazyTransformProperty -up-|> ReadOnlyObjectProperty
  TreeVisiblePropertyReadOnly -up-|> BooleanExpression
  TreeShowingPropertyReadOnly -up-|> BooleanExpression
  FocusedProperty -up-|> ReadOnlyBooleanPropertyBase
  EffectiveOrientationProperty -up-|> ReadOnlyObjectPropertyBase
  NodeTransformation +-down- LocalToSceneTransformProperty
  LocalToSceneTransformProperty -up-|> LazyTransformProperty
  ReadOnlyObjectWrapperManualFire -up-|> ReadOnlyObjectWrapper
  ReadOnlyPropertyImpl -up-|> ReadOnlyObjectPropertyBase
  Listener -up-|> InvalidationListener
  Listener -up-|> WeakListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
